--- a/integrador.html
+++ b/integrador.html
@@ -25,7 +25,7 @@
             alt=""
             />Conf de Bs As</a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
+          <div class="navbar-nav ml-auto mr-5">
             <a class="nav-item nav-link active" href="#">La conferencia<span
                 class="sr-only"></span></a>
             <a class="nav-item nav-link" href="#">Los oradores</a>
@@ -162,18 +162,46 @@
               </div>
             </div>
             <div class="form-group">
-              <textarea class="form-control mt-3" rows="3">Sobre qué quieres
-                hablar?</textarea>
+              <textarea class="form-control mt-3" rows="3">Sobre qué quieres hablar?</textarea>
               <small class="form-text text-muted text-left">Recuerda incluir un
                 título para tu charla</small>
               <button type="button" class="btn light-green col-12 mt-3">Enviar</button>
             </div>
           </div>
         </form>
-        <div class="col-3"></div>
-
+        <div class="col-3">
+        </div>
+      </div>
+      
         <!-- Footer -->
-
+        <footer class="text-center text-white bg-dark">
+          <section class="mt-8">
+              <div class="row align-items-center d-inline-flex justify-content-center p-4">
+                  <!-- Links del footer -->
+                  <div class="col gx-5">
+                      <a href="#!" class="text-white text-decoration-none">Preguntas frecuentes</a>
+                  </div>
+                  <div class="col gx-5">
+                      <a href="#!" class="text-white text-decoration-none">Contáctanos</a>
+                  </div>
+                  <div class="col gx-5">
+                      <a href="#!" class="text-white text-decoration-none">Prensa</a>
+                  </div>
+                  <div class="col gx-5">
+                      <a href="#!" class="text-white text-decoration-none">Conferencias</a>
+                  </div>
+                  <div class="col gx-5">
+                      <a href="#!" class="text-white text-decoration-none">Términos y condiciones</a>
+                  </div>
+                  <div class="col gx-5">
+                      <a href="#!" class="text-white text-decoration-none">Privacidad</a>
+                  </div>
+                  <div class="col">
+                      <a href="#!" class="text-white text-decoration-none">Estudiantes</a>
+                  </div>
+              </div>
+          </section>
+        </footer>
       </header>
     </body>
   </html>
